# remote-virtio-gpu

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md
.github/workflows/: test.yaml
documentation/: coding-style.md
documentation/patches/kernel/: 0001-drm-virtio-Add-VSYNC-support-linux-5-10.patch  0001-drm-virtio-Add-VSYNC-support-linux-5-4.patch  0001-drm-virtio-Add-VSYNC-support-linux-5-8.patch
documentation/patches/mesa-virtio/: 0001-glBufferData-Update-resource-backing-memory.patch
example/rvgpu-2.0.0/multi-node/: initial-vscreen.json  virtual-screen-def.json
example/rvgpu-2.0.0/multi-node/glmark2-es2-wayland/: app.json
example/rvgpu-2.0.0/single-node/: initial-vscreen.json  virtual-screen-def.json
example/rvgpu-2.0.0/single-node/glmark2-es2-wayland/: app.json
include/librvgpu/: rvgpu-plugin.h  rvgpu-protocol.h  rvgpu-virgl-format.h  rvgpu.h
include/rvgpu-generic/: rvgpu-capset.h  rvgpu-sanity.h  rvgpu-utils.h
include/rvgpu-proxy/: rvgpu-proxy.h
include/rvgpu-proxy/gpu/: rvgpu-gpu-device.h  rvgpu-input-device.h  rvgpu-iov.h  rvgpu-map-guest.h  rvgpu-vqueue.h
include/rvgpu-renderer/: rvgpu-renderer.h
include/rvgpu-renderer/backend/: rvgpu-gbm.h  rvgpu-offscreen.h  rvgpu-wayland.h
include/rvgpu-renderer/compositor/: rvgpu-buffer-fd.h  rvgpu-compositor.h  rvgpu-connection.h  rvgpu-json-helpers.h
include/rvgpu-renderer/ivi/: ivi-application-client-protocol.h
include/rvgpu-renderer/renderer/: rvgpu-egl.h  rvgpu-input.h  rvgpu-render2d.h
include/rvgpu-renderer/tests/: rvgpu-wm.h
include/rvgpu-renderer/virgl/: rvgpu-virgl.h
include/rvgpu-utils/: rvgpu-utils.h
settings/: virgl.capset
settings/udev/: 75-virtio-seat.rules  76-uinput-seat.rules  98-set-video-group-virtio-lo.rules  99-set-input-group-uinput.rules
src/: CMakeLists.txt
src/librvgpu/: CMakeLists.txt  rvgpu.c
src/librvgpu/res/: rvgpu-res.c
src/librvgpu/tcp/: rvgpu-tcp.c
src/rvgpu-driver-linux/: .gitignore  CMakeLists.txt  virtio_lo_device.c  virtio_lo_device.h  virtio_lo_driver.c
src/rvgpu-driver-linux/include/uapi/linux/: virtio_lo.h
src/rvgpu-proxy/: CMakeLists.txt  rvgpu-proxy.c
src/rvgpu-proxy/gpu/: rvgpu-gpu-device.c  rvgpu-input-device.c  rvgpu-iov.c  rvgpu-map-guest.c  rvgpu-vqueue.c
src/rvgpu-renderer/: CMakeLists.txt  rvgpu-renderer.c
src/rvgpu-renderer/backend/: rvgpu-gbm.c  rvgpu-offscreen.c  rvgpu-wayland.c
src/rvgpu-renderer/compositor/: rvgpu-buffer-fd.c  rvgpu-compositor.c  rvgpu-connection.c  rvgpu-json-helpers.c
src/rvgpu-renderer/ivi/: ivi-application-client-protocol.c
src/rvgpu-renderer/renderer/: rvgpu-egl.c  rvgpu-input.c  rvgpu-render2d.c
src/rvgpu-renderer/tests/: CMakeLists.txt
src/rvgpu-renderer/tests/rvgpu-distrib-com/: CMakeLists.txt  rvgpu-distrib-com.c
src/rvgpu-renderer/tests/rvgpu-wm/: CMakeLists.txt  rvgpu-wm.c
src/rvgpu-renderer/virgl/: rvgpu-virgl.c
src/rvgpu-sanity/: CMakeLists.txt  rvgpu-sanity.c
src/rvgpu-utils/: CMakeLists.txt  rvgpu-utils.c
